Prevent infinite overlapping of Account & Accounts sheets

--- a/src/components/account-info.css
+++ b/src/components/account-info.css
@@ -152,7 +152,7 @@
   [tabindex='0']:is(:hover, :focus) {
     color: var(--text-color);
     cursor: pointer;
-    text-decoration: underline;
+    text-decoration-color: var(--text-insignificant-color);
   }
 }
 .timeline-start .account-container .stats {
@@ -163,6 +163,9 @@
   flex-shrink: 0;
   display: flex;
   gap: 0.5em;
+}
+.account-container .stats a:not(.insignificant) {
+  color: inherit;
 }
 .account-container .stats a:hover {
   color: inherit;
